--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Лучшие ...</title>
+    <title>Лучшие тяговые аккумуляторы 48 вольт для Heli купить с доставкой</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -68,15 +68,15 @@
         </nav>
     </header>
     <main>
-<h2>Лучшие ...</h2>
+<h1>Лучшие тяговые аккумуляторы 48 вольт для Heli</h1>
 
 <p>1 абзац</p>
 
 
-<h2>1. оффер</h2>
+<h2>1. товар</h2>
 
 
-<h2>2. оффер</h2>
+<h2>2. товар</h2>
 
     </main>
     <footer>
